# custom_ledger

./: .gitignore  README.md  USER_MANUAL.md  license.txt  pyproject.toml
custom_ledger/: hooks.py  modules.txt  patches.txt
custom_ledger/core/: balance_recompute.py  cache_utils.py  engine_transactional.py  engine_value_snapshot.py  erpnext_integration.py  exceptions.py  field_protection.py  ledger_engine.py  reposting.py
custom_ledger/custom_ledger/api/: dashboard_data.py  source_doctype_buttons.py
custom_ledger/patches/v0_1/: backfill_balance_and_narration.py  backfill_ledger_type.py
custom_ledger/tests/: test_balance_field_options.py  test_balance_recompute.py  test_cache_utils.py  test_custom_ledger.py  test_engine_transactional.py  test_field_protection.py  test_label_rendering.py  test_ledger_config.py  test_ledger_dimension.py  test_ledger_engine.py  test_ledger_entry.py  test_smoke.py
docs/: VERSIONING.md
ledgerly/: hooks.py  modules.txt  patches.txt
ledgerly/core/: balance_recompute.py  cache_utils.py  engine_transactional.py  engine_value_snapshot.py  exceptions.py  field_protection.py  ledger_engine.py  reposting.py
ledgerly/ledgerly/api/: dashboard_data.py  source_doctype_buttons.py
ledgerly/patches/v0_1/: backfill_balance_and_narration.py  (+1 more)
ledgerly/tests/: test_balance_field_options.py  test_balance_recompute.py  test_cache_utils.py  test_custom_ledger.py  test_engine_transactional.py  test_field_protection.py  test_label_rendering.py  test_ledger_config.py  test_ledger_dimension.py  test_ledger_engine.py  test_ledger_entry.py  test_smoke.py
(+33 files in other folders)
